--- a/libft/Makefile
+++ b/libft/Makefile
@@ -38,10 +38,39 @@ FILENAMES	=		ft_atoi.c			\
 					ft_strrchr.c		\
 					ft_strstr.c			\
 					ft_tolower.c		\
-					ft_toupper.c
+					ft_toupper.c		\
+					ft_memalloc.c		\
+					ft_memdel.c			\
+					ft_strnew.c			\
+					ft_strdel.c			\
+					ft_strclr.c			\
+					ft_striter.c		\
+					ft_striteri.c		\
+					ft_strmap.c			\
+					ft_strmapi.c		\
+					ft_strequ.c			\
+					ft_strnequ.c		\
+					ft_strsub.c			\
+					ft_strjoin.c		\
+					ft_strtrim.c		\
+					ft_strsplit.c		\
+					ft_itoa.c			\
+					ft_putchar.c		\
+					ft_putstr.c			\
+					ft_putendl.c		\
+					ft_putnbr.c			\
+					ft_putchar_fd.c		\
+					ft_putstr_fd.c		\
+					ft_putendl_fd.c		\
+					ft_putnbr_fd.c		\
+					ft_lstnew.c			\
+					ft_lstdelone.c		\
+					ft_lstdel.c			\
+					ft_lstadd.c			\
+					ft_lstiter.c		\
 
 CC			=		gcc
-CFLAGS		=		-c -Wall -Wextra -Werror
+CFLAGS		=		-c -Wall -Wextra -Werror -O3
 OBJS		=		$(FILENAMES:.c=.o)
 
 .PHONY:	all clean fclean re
